--- a/Pages/ScorePage.xaml
+++ b/Pages/ScorePage.xaml
@@ -1,20 +1,12 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MySolarSystem.Pages.Quiz"
-             Title="Quiz">
+             x:Class="MySolarSystem.Pages.ResultPage"
+             Title="ResultPage">
     <VerticalStackLayout>
         <Label 
-            Text="QUIZ!"
+            Text="Welcome to .NET MAUI!"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
-
-        <Button
-            x:Name="btnStartQuiz"
-            Margin="20"
-            BackgroundColor="BlueViolet"
-            Text="Start"
-            TextColor="Wheat"
-            FontSize="24"/>
     </VerticalStackLayout>
 </ContentPage>
