--- a/Pages/Home.xaml
+++ b/Pages/Home.xaml
@@ -3,39 +3,21 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MySolarSystem.Pages.Home"
              Title="Home">
-    <ContentPage.Background>
+    
+        <VerticalStackLayout>
+            <Label 
+                Margin="20"
+            Text="MY SOLAR SYSTEM"
+                HorizontalTextAlignment="Center"
+                
+            FontSize="48"
+                FontAttributes="Bold"
+                VerticalOptions="CenterAndExpand"
+             />
 
-        <LinearGradientBrush EndPoint="1,0">
-            <GradientStop Color="#FFF9D7"
-                          Offset="0.0001" />
-            <GradientStop Color="#EE81B3"
-                          Offset="0.45" />
-            <GradientStop Color="#810955"
-                          Offset="4.4" />
-            <GradientStop Color="#610C63"
-                          Offset="5.0" />
-        </LinearGradientBrush>
+            <Image
+                Source="astronaut.svg"/>
 
-    </ContentPage.Background>
-    <VerticalStackLayout>
-        <Label 
-            Text="HOME!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+        </VerticalStackLayout>
 
-        <!--<Frame BackgroundColor="#EEEEEE" Padding="10" HasShadow="False" IsClippedToBounds="True">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="Auto" />
-                </Grid.ColumnDefinitions>
-
-                <Image Source="earth.svg" HeightRequest="24" WidthRequest="24" HorizontalOptions="Start" VerticalOptions="Center" />
-                <Label Text="EARTH" Grid.Column="1" HorizontalOptions="Start" VerticalOptions="Center" />
-            </Grid>
-        </Frame>-->
-
-
-
-    </VerticalStackLayout>
 </ContentPage>
