--- a/Pages/Lessons.xaml
+++ b/Pages/Lessons.xaml
@@ -7,6 +7,7 @@
         <VerticalStackLayout>
             <Label 
             Text="Select a lesson" 
+                FontSize="Large"
             HorizontalOptions="Center"
                 Margin="5,5,5,30"/>
 
@@ -23,9 +24,29 @@
             Text="Venus"/>
 
             <Button
+            x:Name="btnEarth"
+            Text="Earth"/>
+
+            <Button
             x:Name="btnMars"
             Text="Mars"/>
-            
+
+            <Button
+            x:Name="btnJupiter"
+            Text="Jupiter"/>
+
+            <Button
+            x:Name="btnSaturn"
+            Text="Saturn"/>
+
+            <Button
+            x:Name="btnUranus"
+            Text="Uranus"/>
+
+            <Button
+            x:Name="btnNeptune"
+            Text="Neptune"/>
+
         </VerticalStackLayout>
     </ScrollView>
     
