--- a/Pages/Quiz.xaml
+++ b/Pages/Quiz.xaml
@@ -6,27 +6,31 @@
     <ScrollView>
         <VerticalStackLayout>
             <Label 
-            Text="Test your space smarts with 5 questions!"
+                Text="Test your space smarts with 5 questions!"
                 Margin="30"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+                FontSize="Large"
+                FontAttributes="Bold"
+                VerticalOptions="Center" 
+                HorizontalTextAlignment="Center" />
 
             <Label 
                 Margin="0, 50, 0, 0"
-            Text="Just pick the correct answer"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+                Text="Just pick the correct answer"
+                FontSize="Large"
+                VerticalOptions="Center" 
+                HorizontalOptions="Center" />
 
             <Label 
                 Margin="30"
-            Text="Good luck, space explorer!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+                FontSize="Large"
+                Text="Good luck, space explorer!"
+                VerticalOptions="Center" 
+                HorizontalOptions="Center" />
 
             <Button
-            x:Name="btnStartQuiz"
-            Margin="20, 70, 20, 10"
-            Text="Start"/>
+                x:Name="btnStartQuiz"
+                Margin="20, 70, 20, 10"
+                Text="Start"/>
         </VerticalStackLayout>
     </ScrollView>
     
