--- a/Resources/Styles/Colors.xaml
+++ b/Resources/Styles/Colors.xaml
@@ -4,9 +4,12 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
 
-    <Color x:Key="Primary">#2A2550</Color>
-    <Color x:Key="Secondary">#E04D01</Color>
-    <Color x:Key="Tertiary">#251D3A</Color>
+    <Color x:Key="PrimaryLight">#B6B6E0</Color>
+    <Color x:Key="SecondaryLight">#FF8000</Color>
+    <Color x:Key="TertiaryLight">#9E9ED5</Color>
+    <Color x:Key="PrimaryDark">#2A2550</Color>
+    <Color x:Key="SecondaryDark">#E04D01</Color>
+    <Color x:Key="TertiaryDark">#251D3A</Color>
     <Color x:Key="White">White</Color>
     <Color x:Key="Black">Black</Color>
     <Color x:Key="Gray100">#E1E1E1</Color>
@@ -17,9 +20,12 @@
     <Color x:Key="Gray600">#404040</Color>
     <Color x:Key="Gray900">#212121</Color>
     <Color x:Key="Gray950">#141414</Color>
-    <SolidColorBrush x:Key="PrimaryBrush" Color="{StaticResource Primary}"/>
-    <SolidColorBrush x:Key="SecondaryBrush" Color="{StaticResource Secondary}"/>
-    <SolidColorBrush x:Key="TertiaryBrush" Color="{StaticResource Tertiary}"/>
+    <SolidColorBrush x:Key="PrimaryBrushLight" Color="{StaticResource PrimaryLight}"/>
+    <SolidColorBrush x:Key="SecondaryBrushLight" Color="{StaticResource SecondaryLight}"/>
+    <SolidColorBrush x:Key="TertiaryBrushLight" Color="{StaticResource TertiaryLight}"/>
+    <SolidColorBrush x:Key="PrimaryBrushDark" Color="{StaticResource PrimaryDark}"/>
+    <SolidColorBrush x:Key="SecondaryBrushDark" Color="{StaticResource SecondaryDark}"/>
+    <SolidColorBrush x:Key="TertiaryBrushDark" Color="{StaticResource TertiaryDark}"/>
     <SolidColorBrush x:Key="WhiteBrush" Color="{StaticResource White}"/>
     <SolidColorBrush x:Key="BlackBrush" Color="{StaticResource Black}"/>
     <SolidColorBrush x:Key="Gray100Brush" Color="{StaticResource Gray100}"/>
