--- a/Pages/QuestionPage.xaml
+++ b/Pages/QuestionPage.xaml
@@ -3,8 +3,15 @@
              x:Class="MySolarSystem.Pages.QuestionPage">
     <ScrollView>
         <VerticalStackLayout Padding="20">
-            <Image x:Name="QuestionImage" HeightRequest="200" Aspect="AspectFit" />
-            <Label x:Name="QuestionTextLabel" FontSize="20" Margin="0,20,0,20" HorizontalOptions="Center"/>
+            <Image x:Name="QuestionImage" 
+                   HeightRequest="200" 
+                   Aspect="AspectFit" />
+            
+            <Label x:Name="QuestionTextLabel" 
+                   FontSize="20" 
+                   Margin="0,20,0,20" 
+                   HorizontalOptions="Center"/>
+            
             <ListView x:Name="AnswerChoicesListView" SelectionMode="Single" ItemSelected="AnswerChoicesListView_ItemSelected">
                 <ListView.ItemTemplate>
                     <DataTemplate>
@@ -16,7 +23,12 @@
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-            <Button x:Name="NextButton" Text="Next" Clicked="NextButton_Clicked" Margin="30" />
+            
+            <Button x:Name="NextButton"
+                    Text="Next" 
+                    Clicked="NextButton_Clicked"
+                    Margin="30" />
+            
         </VerticalStackLayout>
     </ScrollView>
     
